--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,32 @@ on:
   workflow_dispatch:
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.13'
+
+    - name: Install uv
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install uv
+
+    - name: Install dependencies
+      run: |
+        uv sync --dev
+
+    - name: Run ruff checks
+      run: |
+        uv run ruff check .
+        uv run ruff format --check .
+
   build:
+    needs: lint
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
@@ -43,13 +68,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        uv sync
-        uv pip install pyinstaller
-
-    - name: Run ruff checks
-      run: |
-        uv run ruff check .
-        uv run ruff format --check .
+        uv sync --dev
 
     - name: Build with PyInstaller
       run: |
