--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,12 @@ dependencies = [
     "PyQt6>=6.5.0",
 ]
 
+[tool.uv]
+dev-dependencies = [
+    "ruff>=0.8.0",
+    "pyinstaller>=6.0",
+]
+
 [tool.ruff]
 line-length = 100
 target-version = "py39"
